# opencv4nodejs

./: CMakeLists.txt  Makefile  README.md  build-electron.bat  conanfile.txt  package.json  tsconfig.json
cc/core/: Mat.cc  Mat.h
cjs/: package.json
src/lib/: cvloader.ts  meta.ts  opencv4nodejs.ts
